DLang.Tests/Tests/errors/syntax/invalid_structure.d
if then print x end
